# OpenMMO

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  MAP_DESIGN.md  README.ja.md  README.md  README.zh-CN.md
.codex/: config.toml
agent-client/: Cargo.toml  build.rs
agent-client/data/: config.toml.example  system_prompt.txt
agent-client/data/npcs/karl/: schedule.json
agent-client/data/npcs/rica/: schedule.json
agent-client/data/prompts/instances/: rica.txt
agent-client/data/templates/: guard.txt  merchant.txt
agent-client/src/: claude.rs  codex.rs  driver.rs  geom.rs  google_auth.rs  llm_scheduler.rs  main.rs  mcp.rs  monster_ai.rs  openrouter.rs  orchestrator.rs  shop_info.rs  state.rs  terrain_http.rs  watch.html  watch.rs  ws.rs
agent-client/src/driver/: action.rs  combat.rs  execute.rs  mod.rs  movement.rs  prompt.rs
assets/: all_animation.blend
client/: .prettierrc  MEMO.md  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
data/: convert.mjs  furniture_footprints.json  items.csv  items.json  map_labels.json  monsters.csv  world.json
data-src/: ai_templates.json  behavior_trees.json  dungeons.csv  items.csv  map_labels.csv  merchants.csv  monsters.csv  npcs.csv  world.json  world_drop.csv
doc/: AGENT_CLIENT.md  AGENT_CLIENT_QUICKSTART.md  ANIMATION.md  ASSETS.md  COMBAT.md  ECONOMY.md  HOUSING_SYSTEM.md  NPC_MONSTER_AI.md  REMOTE_AGENT_CLIENT.md  RIVER_SYSTEM.md  RUNTIME_PERFORMANCE.md  TERRAIN_GENERATION.md  TODO.md  (+3 more)
terrain/: Cargo.toml
terrain/src/: coords.rs  height.rs  io.rs  lib.rs  tests.rs  trees.rs
(+379 files in other folders)
