[package]
name = "onlinerpg-terrain"
version = "0.1.0"
edition = "2021"

[dependencies]
onlinerpg-shared = { path = "../shared" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["fs", "sync"] }
tracing = "0.1"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
